--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-google-auth==2.3.3
-google-api-python-client==2.31.0
-oauth2client==4.1.3
+google-auth
+google-api-python-client
+oauth2client
 google-auth-oauthlib
 google-auth-httplib2
-google-api-python-client
 cryptography
